Assign IDXGISwapChain to SwapChainPanel

--- a/DivisionEngine.Editor/DivisionEngine.Editor.csproj
+++ b/DivisionEngine.Editor/DivisionEngine.Editor.csproj
@@ -36,6 +36,7 @@
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
 		<TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
+		<AllowUnsafeBlocks>True</AllowUnsafeBlocks>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -68,6 +69,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\DivisionEngine.Core\DivisionEngine.Core.csproj" />
+	  <ProjectReference Include="..\DivisionEngine.Editor.Native\DivisionEngine.Editor.Native.vcxproj" />
 	</ItemGroup>
 
   <ItemGroup>
