graphics backend abstraction

--- a/DivisionEngine.Editor/DivisionEngine.Editor.csproj
+++ b/DivisionEngine.Editor/DivisionEngine.Editor.csproj
@@ -1,9 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>
-      net8.0-maccatalyst
-    </TargetFrameworks>
+    <TargetFrameworks>net8.0-maccatalyst</TargetFrameworks>
     <!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
     <!-- <TargetFrameworks>$(TargetFrameworks);net8.0-tizen</TargetFrameworks> -->
 
@@ -77,5 +75,11 @@
     <Content Include="..\x64\Debug\DivisionEngine.Editor.Native*">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Platforms\MacCatalyst\NativeGraphicsPanelHandler.cs">
+      <ExcludeFromCurrentConfiguration>true</ExcludeFromCurrentConfiguration>
+    </Compile>
   </ItemGroup>
 </Project>
