--- a/DivisionEngine.Native/DivisionEngine.Native.vcxproj
+++ b/DivisionEngine.Native/DivisionEngine.Native.vcxproj
@@ -139,13 +139,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="d3d12_entrypoint.h" />
+    <ClInclude Include="D3D12Backend.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="window.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="d3d12_entrypoint.cpp" />
+    <ClCompile Include="D3D12Backend.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
