--- a/DivisionEngine.Native/DivisionEngine.Native.vcxproj.filters
+++ b/DivisionEngine.Native/DivisionEngine.Native.vcxproj.filters
@@ -21,10 +21,10 @@
     <ClInclude Include="pch.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="d3d12_entrypoint.h">
+    <ClInclude Include="window.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="window.h">
+    <ClInclude Include="D3D12Backend.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
@@ -38,7 +38,7 @@
     <ClCompile Include="window.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="d3d12_entrypoint.cpp">
+    <ClCompile Include="D3D12Backend.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
